# RabbitFX-Casestudy

./: .gitignore  README.md
RabbitFX-Ktrim/: CMakeLists.txt  README.md
RabbitFX-Ktrim/src/: common.h  main.cpp  param_handler.h  pe_handler.h  se_handler.h
RabbitFX-Ktrim/src/io/: CMakeLists.txt  DataPool.h  FastxIO.cpp  FastxStream.cpp
RabbitFX-Mash/: README.md  configure.ac
RabbitFX-Mash/src/mash/: Sketch.cpp  Sketch.h
RabbitFX-Mash/src/mash/fastx/: FastxStream.h  FileReader.h  util.h
RabbitFX-fastp/: Makefile  README.md
RabbitFX-fastp/src/: FastqStream.h  FileReader.h  common.h  htmlreporter.cpp  main.cpp  options.cpp  processor.cpp  seprocessor.cpp  threadconfig.cpp
RabbitIO-Ktrim/: README.md
RabbitIO-Ktrim/src/: common.h  ktrim.cpp  main.cpp  param_handler.h  se_handler.h  util.h
RabbitIO-Ktrim/src/io/: Buffer.h  DataQueue.h  FastxChunk.h  FastxIO.h  FastxStream.h  Reference.h
RabbitIO-Mash/: Makefile.in  README.md  configure  mash
RabbitIO-Mash/src/mash/: CommandSketch.cpp  Sketch.cpp  mash.cpp
RabbitIO-fastp/src/: htmlreporter.h  main.cpp  options.h  threadconfig.h
